--- a/ViandasDelSur/appsettings.json
+++ b/ViandasDelSur/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "VDSConnection": "Server=Escritorio\\SQLEXPRESS;Database=ViandasDelSur;Trusted_Connection=True;TrustServerCertificate=true"
+    "VDSConnection": "Server=localhost;Database=ViandasDelSur;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
