--- a/ViandasDelSur/ViandasDelSur.csproj
+++ b/ViandasDelSur/ViandasDelSur.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\DTOS\DeliverySummaryDTO.cs" />
     <Compile Remove="Models\Enums\Day.cs" />
   </ItemGroup>
 
